k8s/base/backend/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sample-app-backend
  labels:
    app.kubernetes.io/name: sample-app
    app.kubernetes.io/component: sample-app-backend

spec:
  replicas: 1

  selector:
    matchLabels:
      app.kubernetes.io/name: sample-app
      app.kubernetes.io/component: sample-app-backend

  template:
    metadata:
      labels:
        app.kubernetes.io/name: sample-app
        app.kubernetes.io/component: sample-app-backend

    spec:
      serviceAccountName: sample-app-backend-service-account

      securityContext:
        runAsNonRoot: true
        runAsUser: 10001
        runAsGroup: 10001
        fsGroup: 10001
        fsGroupChangePolicy: OnRootMismatch
        seccompProfile:
          type: RuntimeDefault

      containers:
        - name: sample-app-backend
          image: sample-app-backend-image
          imagePullPolicy: IfNotPresent

          ports:
            - name: http
              containerPort: 5010
              protocol: TCP

          volumeMounts:
            - name: backend-logs
              mountPath: /backend/logs

          readinessProbe:
            httpGet:
              path: /health
              port: http
            initialDelaySeconds: 10
            periodSeconds: 10
            timeoutSeconds: 3
            failureThreshold: 6

          livenessProbe:
            httpGet:
              path: /health
              port: http
            initialDelaySeconds: 30
            periodSeconds: 20
            timeoutSeconds: 3
            failureThreshold: 3

          resources:
            requests:
              cpu: 100m
              memory: 128Mi

            limits:
              cpu: 500m
              memory: 512Mi

          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL

      volumes:
        - name: backend-logs
          persistentVolumeClaim:
            claimName: sample-app-backend-logs
