k8s/base/backend/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: sample-app-backend
  labels:
    app.kubernetes.io/name: sample-app
    app.kubernetes.io/component: sample-app-backend
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-cloudflare
    nginx.ingress.kubernetes.io/ssl-redirect: "true"

spec:
  ingressClassName: nginx

  tls:
    - hosts:
        - api.example.com
      secretName: api-example-com-tls

  rules:
    - host: api.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: sample-app-backend
                port:
                  number: 5010
